--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,10 +8,46 @@
     {% endblock %}
 </head>
 <body class="bg-light">
+
+<nav class="navbar navbar-dark navbar-expand-md sticky-top bg-dark p-0">
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0"
+       href="{{ path('index') }}">Tattoo Search App</a>
+    <div class="w-100 order-1 order-md-0">
+        <ul class="navbar-nav px-3">
+            {% if is_granted('ROLE_USER') %}
+                <li class="nav-item text-nowrap">
+                    <a class="nav-link" href="">Some function</a>
+                </li>
+            {% endif %}
+        </ul>
+    </div>
+
+    <div class="order-2 order-md-1">
+        <ul class="navbar-nav px-3">
+            {% if is_granted('ROLE_USER') %}
+                <li class="nav-item text-nowrap">
+                    <a class="nav-link"
+                       href="#">{{ app.user.fullName }}</a>
+                </li>
+                <li class="nav-item text-nowrap">
+                    <a class="nav-link"
+                       href="{{ logout_path() }}">Sign out</a>
+                </li>
+            {% else %}
+                <li class="nav-item text-nowrap">
+                    <a class="nav-link"
+                       href="{{ path('security_login') }}">Sign in</a>
+                </li>
+            {% endif %}
+        </ul>
+    </div>
+</nav>
+
 <main role="main" class="container">
-    <h1>Tattoo Search</h1>
-    {% block body %}
-    {% endblock %}
+    <div class="my-3 p-3 bg-white rounded box-shadow">
+        {% block body %}
+        {% endblock %}
+    </div>
 </main>
 {% block javascripts %}
     <script src="{{ asset('build/js/app.js') }}"></script>
