--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,2 +1,8 @@
 .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
 .container { width: 590px; }
+.dropdown-menu {
+    min-width: 0px !important;
+}
+.dropdown-menu a button:hover {
+    cursor: pointer;
+}
