--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -2,9 +2,9 @@
 
 {% block body %}
 
-    <h2>Start the search for your dream tattoo!
+    <h2>{{ 'Welcome to the '|trans ~ site_name }}!
         {% if is_granted('ROLE_USER') == false %}
-            <br><a href="{{ path('user_register') }}">Register here</a>
+            <br><a href="{{ path('user_register') }}">{{ 'Register here'|trans }}</a>
         {% endif %}
             </h2>
 
