--- a/templates/register/register.html.twig
+++ b/templates/register/register.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Register - {{ site_name }}{% endblock %}
+
 {% block body %}
     {{ form_start(form) }}
     {{ form_widget(form) }}
