--- a/templates/security/confirmation.html.twig
+++ b/templates/security/confirmation.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}{{ site_name }}{% endblock %}
+
 {% block body %}
     {% if user %}
         <h5>Congratulations!</h5>
