--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Login - {{ site_name }}{% endblock %}
+
 {% block body %}
     {% if error %}
         <div class="alert alert-danger">
