Basic setup: added password change

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -62,7 +62,7 @@
         {% for label, messages in app.flashes %}
             {% for message in messages %}
                 <div class="alert alert-{{ label }}">
-                    {{ message }}
+                    {{ message|trans }}
                 </div>
             {% endfor %}
         {% endfor %}
