--- a/templates/profile/password-change.html.twig
+++ b/templates/profile/password-change.html.twig
@@ -1,9 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{{ title_separator ~ site_name }}{% endblock %}
+{% block title %}{{ 'Password change'|trans ~ title_separator ~ site_name}}{% endblock %}
 
 {% block body %}
+    <h2>{{ 'Password change'|trans }}</h2>
+
     {{ form_start(form) }}
     {{ form_widget(form) }}
     {{ form_end(form) }}
+
 {% endblock %}
