--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Login - {{ site_name }}{% endblock %}
+{% block title %}Login {{ title_separator ~ site_name}}{% endblock %}
 
 {% block body %}
     {% if error %}
