--- a/templates/email/registration.html.twig
+++ b/templates/email/registration.html.twig
@@ -1,5 +1,6 @@
 {{ 'email.registration'|trans({
     '%name%': user.fullName,
     '%confirm-link%': url('security_confirm', {'token': user.confirmationToken}),
-    '%login-link%': url('security_login')
+    '%login-link%': url('security_login'),
+    '%site_name%': site_name
 })|raw }}
