--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -1,9 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ 'Profile'|trans ~ title_separator ~ site_name }}{% endblock %}
+{% block title %}{{user.fullName ~ title_separator ~ site_name }}{% endblock %}
 
 {% block body %}
     <h2>{{ 'Profile'|trans }}</h2>
-    <a href="{{ path('profile_update') }}">{{ 'Profile update'|trans }}</a><br>
-    <a href="{{ path('profile_password') }}">{{ 'Password change'|trans }}</a>
+    <table class="table">
+        <tbody>
+
+        <tr>
+            <td colspan="2"><a href="{{ path('profile_update') }}">{{ 'Profile update'|trans }}</a> ~
+            <a href="{{ path('profile_password') }}">{{ 'Password change'|trans }}</a></td>
+        </tr>
+
+        {% for key,val in profileData %}
+
+            <tr>
+                <th scope="row">{{ key|trans }}</th>
+                <td>{{ val }}</td>
+            </tr>
+
+        {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
