--- a/templates/security/password-reset.html.twig
+++ b/templates/security/password-reset.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{'Register'| trans ~ title_separator ~ site_name }}{% endblock %}
+{% block title %}{{'Password reset'|trans ~ title_separator ~ site_name}}{% endblock %}
 
 {% block body %}
     {{ form_start(form) }}
