Added new studio adding function

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -58,21 +58,22 @@
     </div>
 </nav>
 
-<main role="main" class="container">
-    <div class="my-3 p-3 bg-white rounded box-shadow">
-        {% set message_count = 0 %}
-        {% for label, messages in app.flashes %}
-            {% for message in messages %}
-                <div class="alert alert-{{ label }}">
-                    {{ message|trans }}
-                </div>
-                {% set message_count = message_count + 1 %}
-            {% endfor %}
-        {% endfor %}
+<main role="main">
 
-        {% block body %}
-        {% endblock %}
-    </div>
+    {% set message_count = 0 %}
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+
+            <div class="alert alert-{{ label }}" align="center">
+                {{ message|trans }}
+            </div>
+            {% set message_count = message_count + 1 %}
+        {% endfor %}
+    {% endfor %}
+
+    {% block body %}
+    {% endblock %}
+
 </main>
 {% block javascripts %}
     <script src="{{ asset('build/js/app.js') }}"></script>
