--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -1,6 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends 'base-layout.html.twig' %}
 
-{% block body %}
+{% block content %}
 
     <h2>
         {{ 'Welcome to the '|trans ~ site_name ~ ' oldalon'|trans}}!
