--- a/templates/profile/user/password-change.html.twig
+++ b/templates/profile/user/password-change.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'profile/layout.html.twig' %}
 
 {% block title %}{{'Password change'|trans ~ title_separator ~ site_name}}{% endblock %}
 
-{% block body %}
+{% block content %}
     <h2>{{ 'Password change'|trans }}</h2>
 
     {{ form_start(form) }}
