--- a/templates/register/register.html.twig
+++ b/templates/register/register.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'base-layout.html.twig' %}
 
 {% block title %}{{'Register'| trans ~ title_separator ~ site_name }}{% endblock %}
 
-{% block body %}
+{% block content %}
     {{ form_start(form) }}
     {{ form_widget(form) }}
     {{ form_end(form) }}
