--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -1,6 +1,7 @@
-{% extends 'base.html.twig' %}
+{% extends 'base-layout.html.twig' %}
 
-{% block body %}
+{% block content %}
+    <div class="container-fluid">
 
     <h2>{{ 'Search'|trans}}</h2>
 
@@ -24,5 +25,5 @@
     {% else %}
         {{ 'No result found'|trans }}
     {% endif %}
-
+    </div>
 {% endblock %}
