--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'base-layout.html.twig' %}
 
 {% block title %}{{'Sign in'|trans ~ title_separator ~ site_name}}{% endblock %}
 
-{% block body %}
+{% block content %}
     {% if error %}
         <div class="alert alert-danger">
             {{ error.messageKey|trans(error.messageData, 'security') }}
