--- a/templates/profile/studio/index.html.twig
+++ b/templates/profile/studio/index.html.twig
@@ -9,7 +9,7 @@
         {% for studio in studioData %}
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">{{ studio.Name }}</h5>
+                    <h5 class="card-title"><a href="{{ path('profile_studio_update', {id: studio.Id}) }}" >{{ studio.Name }}</a></h5>
                     <p class="card-text">{{ 'Address'|trans }}: {{ studio.Address }}</p>
                     <p class="card-text">{{ 'Styles'|trans }}: {{ studio.Styles }}</p>
                     <!--<a href="#" class="card-link">Link</a>-->
