--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -17,7 +17,7 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">{{ studio.name }}</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">{{ studio.address.0.city ~ ' | ' ~ studio.address.0.country }}</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">{{ studio.address.city ~ ' | ' ~ studio.address.country }}</h6>
                     <p class="card-text">Example studio short description.</p>
                 </div>
             </div>
