Added employee functions

--- a/templates/profile/layout.html.twig
+++ b/templates/profile/layout.html.twig
@@ -10,7 +10,7 @@
                 <a class="nav-link" href="{{ path('profile') }}">{{ 'Profile'|trans }}</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ path('profile_update') }}">{{ 'Profile update'|trans }}</a>
+                <a class="nav-link" href="{{ path('profile_edit') }}">{{ 'Edit profile'|trans }}</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('profile_password') }}">{{ 'Password change'|trans }}</a>
