--- a/templates/profile/user/edit.html.twig
+++ b/templates/profile/user/edit.html.twig
@@ -1,9 +1,9 @@
 {% extends 'profile/layout.html.twig' %}
 
-{% block title %}{{'Profile update'|trans ~ title_separator ~ site_name}}{% endblock %}
+{% block title %}{{'Edit profile'|trans ~ title_separator ~ site_name}}{% endblock %}
 
 {% block content %}
-    <h2>{{ 'Profile update'|trans }}</h2>
+    <h2>{{ 'Edit profile'|trans }}</h2>
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
