--- a/templates/profile/studios/edit.html.twig
+++ b/templates/profile/studios/edit.html.twig
@@ -4,10 +4,10 @@
 
 {% block content %}
 
-    <h2>{{ 'Update studio'|trans }}</h2>
+    <h2>{{ 'Edit studios'|trans }}</h2>
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button type="submit" class="btn-secondary btn">{{ 'Update'|trans }}</button>
+    <button type="submit" class="btn-secondary btn">{{ 'Edit'|trans }}</button>
     {{ form_end(form) }}
 {% endblock %}
