--- a/templates/index/default.html.twig
+++ b/templates/index/default.html.twig
@@ -1,8 +1,14 @@
 {% extends 'base-layout.html.twig' %}
 
 {% block content %}
+
     {%  if message_count == 0 %}
         <h3>{{ 'Oops'|trans }}!</h3>
-        <p>{{ 'Something went wrong.'|trans }} <a href="{{ path('index') }}">{{ 'Back to the main page.'|trans }}</a></p>
+        <p>{{ 'Something went wrong.'|trans }}
+    {% else %}
+        <p>
     {% endif %}
+
+    <a href="{{ path('index') }}">{{ 'Back to the main page.'|trans }}</a></p>
+
 {% endblock %}
