--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -13,6 +13,7 @@
     <h2>{{ 'Search'|trans }}</h2>
     {{ form_start(form) }}
     {{ form_widget(form) }}
+    <button type="submit" class="btn-secondary btn">{{ 'Search'|trans }}</button>
     {{ form_end(form) }}
 
 
