--- a/templates/register/register.html.twig
+++ b/templates/register/register.html.twig
@@ -5,5 +5,6 @@
 {% block content %}
     {{ form_start(form) }}
     {{ form_widget(form) }}
+    <button type="submit" class="btn-secondary btn">{{ 'Register'|trans }}</button>
     {{ form_end(form) }}
 {% endblock %}
