--- a/templates/profile/user/password-change.html.twig
+++ b/templates/profile/user/password-change.html.twig
@@ -7,6 +7,7 @@
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
+    <button type="submit" class="btn-secondary btn">{{ 'Edit'|trans }}</button>
     {{ form_end(form) }}
 
 {% endblock %}
