--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -7,6 +7,7 @@
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
+    <button type="submit" class="btn-secondary btn">{{ 'Search'|trans }}</button>
     {{ form_end(form) }}
 
     </div>
@@ -26,4 +27,5 @@
         {{ 'No result found'|trans }}
     {% endif %}
     </div>
+
 {% endblock %}
