--- a/templates/security/password-reset.html.twig
+++ b/templates/security/password-reset.html.twig
@@ -5,5 +5,6 @@
 {% block content %}
     {{ form_start(form) }}
     {{ form_widget(form) }}
+    <button type="submit" class="btn-secondary btn">{{ 'Submit'|trans }}</button>
     {{ form_end(form) }}
 {% endblock %}
